Fix vertical alignment

--- a/app/styles/stream.styl
+++ b/app/styles/stream.styl
@@ -302,10 +302,10 @@
         line-height: 39px
       .help-footer-icon
         float: left
-        padding-left 4px
+        padding-left 10px
+        line-height: 35px
         &::before
           vertical-align: middle
-
 
 .frame-slider-wrapper
   position: absolute
